# astviewer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: ToolchainOptions.cmake
cmake/modules/: FindClang.cmake  FindLLVM.cmake
externalpackages/: CMakeLists.txt
include/: QueryApp.h
include/clang/: ASTPrinterWrapper.h  ClangToolSession.h  QueryCompleterList.h  QueryCompleterModel.h  QueryWrapper.h
include/clang/clang-query/: Query.h  QueryParser.h  QuerySession.h
include/core/: ClangToolSession.h  Command.h  CoreManager.h  DynamicCompleter.h  DynamicStringListModel.h  FutureTask.h  QueryWrapper.h  Task.cpp  Task.h  TaskManager.h  ToolWrapper.h
include/gui/: ClangASTHighlighter.h  CommandInput.h  CompilationDbDelegate.h  CompletionInput.h  Highlighter.h  InputHighlighter.h  LineTextEdit.h  RecentFileManager.h  SelectionProvider.h  TextBlockUserData.h  mainwindow.h
include/util/: FileLoader.h  ProcessHandler.h  QLogHandler.h  StatusHandler.h  Util.h
scripts/: clang-tidy-apply.sh  format_all.sh
src/: QueryApp.cpp  main.cpp
src/clang/: ASTPrinterWrapper.cpp  ClangToolSession.cpp  QueryCompleterList.cpp  QueryCompleterModel.cpp  QueryWrapper.cpp
src/clang/clang-query/: Query.cpp  QueryParser.cpp
src/core/: ClangToolSession.cpp  CoreManager.cpp  DynamicCompleter.cpp  DynamicStringListModel.cpp  FutureTask.cpp  QueryWrapper.cpp  Task.cpp  TaskManager.cpp  ToolWrapper.cpp
src/gui/: ClangASTHighlighter.cpp  CommandInput.cpp  CompilationDbDelegate.cpp  CompletionInput.cpp  Highlighter.cpp  InputHighlighter.cpp  LineTextEdit.cpp  RecentFileManager.cpp  SelectionProvider.cpp  TextBlockUserData.cpp  mainwindow.cpp  mainwindow.ui
src/util/: FileLoader.cpp  ProcessHandler.cpp  QLogHandler.cpp  StatusHandler.cpp
test/: CMakeLists.txt
